# chip8-hs

./: .gitignore  README.md  chip8-hs.cabal
src/: main.hs  tests.hs
src/CLI/: Cli.hs
src/CPU/: CPU.hs  Emulate.hs  LoadRom.hs  Utility.hs
src/Render/: Renderer.hs  Splash.hs
